
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int git_tree_entry ;
typedef int git_tree ;
typedef scalar_t__ git_object_t ;
typedef int git_object ;


 int GIT_EINVALIDSPEC ;
 int GIT_ERROR_OBJECT ;
 scalar_t__ GIT_OBJECT_ANY ;
 int GIT_OBJECT_TREE ;
 int assert (int ) ;
 int git_error_set (int ,char*,char const*,scalar_t__) ;
 int git_object_owner (int const*) ;
 int git_object_peel (int **,int const*,int ) ;
 int git_tree_entry_bypath (int **,int *,char const*) ;
 int git_tree_entry_free (int *) ;
 int git_tree_entry_to_object (int **,int ,int *) ;
 scalar_t__ git_tree_entry_type (int *) ;
 int git_tree_free (int *) ;

int git_object_lookup_bypath(
  git_object **out,
  const git_object *treeish,
  const char *path,
  git_object_t type)
{
 int error = -1;
 git_tree *tree = ((void*)0);
 git_tree_entry *entry = ((void*)0);

 assert(out && treeish && path);

 if ((error = git_object_peel((git_object**)&tree, treeish, GIT_OBJECT_TREE)) < 0 ||
   (error = git_tree_entry_bypath(&entry, tree, path)) < 0)
 {
  goto cleanup;
 }

 if (type != GIT_OBJECT_ANY && git_tree_entry_type(entry) != type)
 {
  git_error_set(GIT_ERROR_OBJECT,
    "object at path '%s' is not of the asked-for type %d",
    path, type);
  error = GIT_EINVALIDSPEC;
  goto cleanup;
 }

 error = git_tree_entry_to_object(out, git_object_owner(treeish), entry);

cleanup:
 git_tree_entry_free(entry);
 git_tree_free(tree);
 return error;
}
